Fix bugs, basic project working, transitioning to stretch goals

--- a/ElasticBeanstalk/static/css/nearbeer.css
+++ b/ElasticBeanstalk/static/css/nearbeer.css
@@ -16,6 +16,14 @@ display:inline;
     margin-right: 20px;
 }
 
+#logo {
+    height: 75px; 
+    width: auto;
+    margin-bottom: 15px;
+    margin-left: 30px;
+    margin-top: 15px;
+}
+
 #mapContainer {
     left:0;
     height: calc(100% - 250px);
